# priscila-project

./: README.md  db.sql  pyproject.toml  tailwind.config.js
church/: settings.py  urls.py
church/static/css/: styles.css
core/: admin.py  manager.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
system/: admin.py  apps.py  forms.py  models.py  views.py
system/management/commands/: generate_report.py
system/migrations/: 0001_initial.py  0002_remove_income_member_remove_income_source_and_more.py  0003_remove_member_whatsapp_line.py  0004_remove_tithe_description.py  0005_account_created_at.py
